syntax = "proto3";

//import "agent.proto";

package proto;

// 认证服务
service AuthService {
    rpc Auth(AuthArgs) returns (AuthRes){} // 验证token有效性
    rpc TokenInfo(TokenInfoArgs) returns (TokenInfoRes){} // token信息
    rpc RefreshToken(RefreshTokenArgs) returns (RefreshTokenRes){} // 刷新token
    rpc DestroyToken(DestroyTokenArgs) returns (DestroyTokenRes){} // 销毁token
}

message AuthArgs {
    int32 UserId = 1;
    string Token = 6;
}

message AuthRes {
    int32  Ret = 1;
    string Msg = 2;
}

message TokenInfoArgs{
    int32 UserId = 1;
    string AppFrom = 2;
    string AppChannel = 3;
    int32 AppVer = 4;
    string UniqueId = 5;
    string Token = 6;
}

message TokenInfoRes{
    int32  Ret = 1;
    string Msg = 2;
    int64 Expire = 3;
}

message RefreshTokenArgs{
    int32 UserId = 1;
    string AppFrom = 2;
    string AppChannel = 3;
    int32 AppVer = 4;
    string UniqueId = 5;
    string Token = 6;
    string RefreshToken = 7;
}

message RefreshTokenRes{
    int32 Ret = 1;
    string Msg = 2;
    int32 UserId = 3;
    string Token = 4;
    string RefreshToken = 5;
    int64 Expire = 6;
}

message DestroyTokenArgs{
    int32 UserId = 1;
    string AppFrom = 2;
    string AppChannel = 3;
    int32 AppVer = 4;
    string UniqueId = 5;
    string Token = 6;
}

message DestroyTokenRes{
    int32 Ret = 1;
}